[workspace]
members = ["."]

[workspace.metadata.dist]
cargo-dist-version = "0.22.1"
ci = "github"
allow-dirty = ["ci"]
installers = ["shell", "powershell"]
unix-archive = ".tar.gz"
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "x86_64-pc-windows-msvc",
]

[workspace.metadata.dist.github-custom-runners]
x86_64-unknown-linux-gnu = "ubuntu-22.04"
aarch64-unknown-linux-gnu = "ubuntu-22.04"
aarch64-apple-darwin = "macos-14"
x86_64-pc-windows-msvc = "windows-2022"

[package]
name = "blast"
version = "0.1.1"
edition = "2024"
description = "A fast, config-driven API load tester and traffic generator"
repository = "https://github.com/Walon-Foundation/blast"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
fake = "5.1.0"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.3", features = ["v4"] }

[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "blast"
path = "src/main.rs"
