[workspace]
members = ["."]

[package]
name = "blast"
version = "0.1.1"
edition = "2024"
description = "A fast, config-driven API load tester and traffic generator"
repository = "https://github.com/Walon-Foundation/blast"
license = "MIT"

# Expose both a native addon (.node) for NAPI and the original CLI binary.
# `rlib` is kept alongside `cdylib` so `cargo test` and the bin crate can link the lib.
[lib]
name = "blast"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
# `cli` builds the `blast` binary; `node` compiles the NAPI addon. They are kept
# apart because the `#[napi]` registration symbols cannot be linked into a plain
# executable (no Node runtime to resolve `napi_*`). `cargo build` uses the
# default `cli`; `napi build` passes `--no-default-features --features node`.
default = ["cli"]
cli = []
node = ["dep:napi", "dep:napi-derive"]

[dependencies]
anyhow = "1.0.102"
napi = { version = "2", features = ["napi4", "async"], optional = true }
napi-derive = { version = "2", optional = true }
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
fake = "5.1.0"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.3", features = ["v4"] }

[build-dependencies]
napi-build = "2"

[[bin]]
name = "blast"
path = "src/main.rs"
required-features = ["cli"]
